--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>2048</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="support.js"></script>
     <script type="text/javascript" src="animation.js"></script>
     <script type="text/javascript" src="main.js"></script>
